# cc-toolkit

./: .gitignore  .gitmodules  Makefile  README.md  settings.example.json
.claude-plugin/: marketplace.json
git-commands/: README.md  install.sh  uninstall.sh  update.sh
git-commands/.claude-plugin/: plugin.json
git-commands/commands/: cd.md  commit.md  generate-pr.md  mr.md  mr:create.md  mr:describe.md  mr:merge.md  release.md  workspace-init.md
git-commands/scripts/: bump_version.py  get_workspace_mode.sh  test_bump_version.py
hubstaff/: README.md  install.sh  uninstall.sh  update.sh
hubstaff/.claude-plugin/: plugin.json
hubstaff/commands/: hubstaff.md  hubstaff:interface.md
hubstaff/scripts/: hubstaff_cli.py  hubstaff_web.py  test_hubstaff_cli.py
jira-tasks/: README.md  install.sh  uninstall.sh  update.sh
jira-tasks/.claude-plugin/: plugin.json
tododo/: install.sh  uninstall.sh
yougile/: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
yougile/.claude-plugin/: plugin.json
yougile/agents/: yougile.md
yougile/scripts/: yougile_api.py  yougile_cli.py  yougile_commands_auth.py  yougile_commands_comments.py  yougile_commands_context.py  yougile_commands_helpers.py  yougile_commands_stickers.py  yougile_commands_tasks.py  yougile_config.py  yougile_format.py  yougile_resolve.py
yougile/tests/: conftest.py  test_api.py  test_bootstrap.py  test_comments.py  test_config.py  test_context.py  test_context_helpers.py  test_resolve.py  test_stickers.py  test_tasks_mutators.py  test_tasks_read.py  test_tasks_write.py
(+5 files in other folders)
